# django-admin-tabs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  sqlite.db
.github/workflows/: ci.yml  release.yml
django_admin_tabs/: __init__.py  admin.py  apps.py  tests.py
django_admin_tabs/static/admin/css/: django_admin_tabs.css
django_admin_tabs/templates/admin/django_admin_tabs/: tab_change_form.html  tab_change_list.html  tab_change_list_change.html  tabs_menu.html
example/: settings.py
example/polls/: admin.py  models.py
example/polls/fixtures/: polls.json
example/polls/migrations/: 0001_initial.py  0002_remove_poll_pub_date.py
