[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-admin-tabs"
version = "1.0.0"
description = "Django admin steps"
authors = ["Mehmet Akyuz <mehmet@mehmetakyuz.net>"]
readme = "README.md"
repository = "https://github.com/mehmetakyuz/django-admin-tabs"
keywords = ["django", "admin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
django = ">=3.2"
Python = ">=3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^3.1.1"
ruff = "^0.1.7"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "admin_tabs/__init__.py:__version__"
build_command = "pip install poetry && poetry build"
