[metadata]
name = django-admin-tabs
version = 1.0
description = Powerful tabbed admins and nested changelists using plain django admin classes.
# long_description = file: README.rst
url = https://www.mehmetakyuz.net/
author = Mehmet Akyuz
author_email = mehmet@mehmetakyuz.net
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
